# eeg-stream-simulator-and-ring-buffer-logger

./: README.md  pyproject.toml
src/eeg_simulator/: buffer.py  cli.py  config.py  generator.py  logger.py  simulator.py  viewer.py
tests/: test_buffer.py  test_cli.py  test_config.py  test_generator.py  test_logger.py  test_simulator.py
