[project]
name = "eeg-stream-simulator-and-ring-buffer-logger"
version = "0.1.0"
description = "A concurrent, multi-process streaming backend for synthetic EEG signal generation"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.11.0",
    "numpy>=2.5.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/eeg_simulator"]

[depenency-groups]
dev = [
    "pytest>=8.0.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]

[project.scripts]
eeg-sim = "eeg_simulator.cli:main"
